# mev-simple-training

./: README.md
artemis/: Cargo.toml
artemis/crates/artemis-core/src/: types.rs
artemis/crates/strategies/winner_snipe/: Cargo.toml
artemis/crates/strategies/winner_snipe/src/: lib.rs
winner-project/script/: DeployWinner.s.sol
winner-project/src/: Winner.sol
