[workspace]
resolver = "2"
members = [
    "bin/winner_bot", 
    "crates/artemis-core",
    "crates/strategies/winner_snipe",
]

default-members = ["bin/winner_bot"]

[workspace.dependencies]
## eth
ethers = { version = "2", features = ["ws", "rustls"]}
ethers-signers = "2.0"
async-trait = "0.1"
anyhow = "1.0"

## async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

## tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

## serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

## misc
eyre = "0.6"
clap = { version = "4", features = ["derive"] }
